# cmake_self_teach

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/ds_al/: CMakeLists.txt
src/ds_al/ch01_basic_syntax/: CMakeLists.txt  Readme.txt  Status.h  main.c
src/ds_al/ch02_list/: CMakeLists.txt  Readme.txt  SqList.c  SqList.h  test.c
